<resources>
    <string name="app_name">Пульс</string>
    <string name="descriptionError">строка не загружена</string>
    <string name="viewError">неизвестная ошибка в View model</string>
    <string name="delete">удалить</string>
    <string name="moveUp">поставить выше</string>
    <string name="moveDown">поставить ниже</string>
    <string name="helperTitle">Справочник</string>
    <string name="back">Отмена</string>
    <string name="resistor">Резистор</string>
    <string name="power">Питание</string>
    <string name="voltmeter">Вольтметр</string>
    <string name="cable">Проводка</string>
    <string name="branching">Разветвление</string>
    <string name="addProject">добавить проект</string>
    <string name="ProjectSave">Ок</string>
    <string name="CancelProject">Отмена</string>
    <string name="enterProject">Введите название</string>
    <string name="standardNameProject">Мой проект</string>
    <string name="rename">Переименовать</string>
    <string name="hintForDetail">Введите значение</string>
    <string name="angleText">Повернуть деталь</string>
    <string name="bucketText">Удалить</string>
    <string name="Om">Ом</string>
    <string name="Volt">В</string>
    <string name="play">Старт</string>
    <string name="correctСonnect">Связь правильная</string>
    <string name="noCorrectСonnect">Связь не правильная</string>

</resources>