<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="@dimen/closeDimen"
        android:layout_height="@dimen/closeDimen"
        android:layout_gravity="end"
        android:layout_margin="0dp"
        android:background="@drawable/ic_close"
        android:contentDescription="@string/CancelProject"
        android:padding="0dp"
        android:scaleType="centerCrop" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
<EditText
    android:id="@+id/nameProject"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="6"
    android:hint="@string/enterProject"
    />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ProjectSave" />
    </LinearLayout>

</LinearLayout>